--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,8 @@ __pycache__/
 *.pyd           # Python extension modules
 .DS_Store       # macOS folder attributes
 *.log           # Log files
+
+# pychache
+__pycache__/
+*.pyc
+*.pyo
